--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,3 +1,8 @@
+@mixin mobile {
+    @media screen and (max-width: 480px) {
+        @content;
+    }
+}
 footer{
     background-color: $colorfondo2; 
     color: $colorletra1; 
@@ -5,9 +10,18 @@ footer{
     display: flex;
     justify-content: center;
     align-items: center;
+    @include mobile{
+        height: 100px;
+    }
+    
     img{
         margin: 20px;
+        @include mobile{
+            width: 40px;
+            margin: 10px;
+        }
     }
+        
     a{
         &:hover{
         transform: scale(1.1, 1.1);
