--- a/scss/_var.scss
+++ b/scss/_var.scss
@@ -1,11 +1,11 @@
-$colorfondo1: #f5f4f2;
-$colorfondo2: #dcd8d1;
-$colorfondo3: #dcd8d14e;
+$colorfondo1: #e0d1cb;
+$colorfondo2: #844740;
+$colorfondo3: #8447409a;
 $colorfondo4: #edede9;
 $colorfondo5: #a99985;
 
 $colorletra1: white;
-$colorletra2: #a99985;
+$colorletra2: #844740;
 $colorletra3: #c9ada7;
 
 $tipografia1: 'Tinos', serif;
